# libsnark-playground

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  factorisation.cpp  gadget.hpp  generate_sha256_gadget_tests.py  longsightf-gadget.cpp  longsightf-gadget.hpp  main.cpp  pedersen-commitment.cpp  pedersen-commitment.hpp  pypy_sha256.py  sha256.cpp  sharkmimc.cpp  sharkmimc.hpp  test-gadget.cpp  test.cpp  util.hpp
